Make http/tests/media/audio-seekable-contains-zero-without-ranges.html work with multibuffers.

This failed on windows with multibuffers.
On all other platforms, the file is delivered immediately and the size is known, on windows it's a little
slower, and we must remember to copy the size of the file when we reach the end. This behavior is a direct
copy from buffered_data_source.cc, passes all tests so far and is unlikely to cause any problems.

BUG=612546

Review-Url: https://codereview.chromium.org/1983793003
Cr-Commit-Position: refs/heads/master@{#394217}

Former-commit-id: 4d435e1e789fe2036570c608d024ba9bcbe64314